--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,7 +6,7 @@ MAINTAINER Marius Maaland <marius.maaland@workday.com>
 # build driver-did-work
 
 ADD . /opt/driver-did-work
-RUN cd /opt/driver-did-work && mvn clean install package -N -DskipTests
+RUN cd /opt/driver-did-work && mvn --settings settings.xml clean install package -N -DskipTests
 
 # variables
 ENV uniresolver_driver_did_work_apikey=sxVQUoDE015VhAs5ep4b57DFA5vT3zqvf1Dm1sGe
