chore: Update build process.
Signed-off-by: Markus Sabadello <markus@danubetech.com>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,14 +3,23 @@
 FROM universalresolver/base-ubuntu
 MAINTAINER Marius Maaland <marius.maaland@workday.com>
 
+# install dependencies
+
+ARG GITHUB_READ_PACKAGES_OWNER
+ARG GITHUB_READ_PACKAGES_TOKEN
+ADD ./settings.xml /root/.m2/
+
 # build driver-did-work
 
 ADD . /opt/driver-did-work
-RUN cd /opt/driver-did-work && mvn --settings settings.xml clean install package -N -DskipTests
+
+RUN cd /opt/driver-did-work && mvn clean install package -N -DskipTests
 
 # variables
+
 ENV uniresolver_driver_did_work_apikey=sxVQUoDE015VhAs5ep4b57DFA5vT3zqvf1Dm1sGe
 ENV uniresolver_driver_did_work_domain=https://credentials.id.workday.com
+
 # done
 
 EXPOSE 8080
