--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,22 @@
 	<packaging>${packaging.type}</packaging>
 	<name>uni-resolver-driver-did-work</name>
 	<version>0.2</version>
-
 	<parent>
 		<groupId>decentralized-identity</groupId>
 		<artifactId>uni-resolver</artifactId>
 		<version>0.1.0</version>
 	</parent>
+
+	<repositories>
+		<repository>
+			<id>danubtech-maven-snapshots</id>
+			<url>https://repo.danubetech.com/repository/maven-snapshots/</url>
+		</repository>
+		<repository>
+			<id>danubtech-maven-releases</id>
+			<url>https://repo.danubetech.com/repository/maven-releases/</url>
+		</repository>
+	</repositories>
 
 	<profiles>
 
