--- a/pom.xml
+++ b/pom.xml
@@ -47,10 +47,6 @@
 							<jettyConfig>
 								${basedir}/src/test/resources/jetty.xml
 							</jettyConfig>
-							<jettyEnvXml>
-								${basedir}/src/test/resources/jetty-env.xml
-							</jettyEnvXml>
-							<contextPath>/</contextPath>
 							<useTestClasspath>true</useTestClasspath>
 							<systemProperties>
 								<systemProperty>
@@ -62,35 +58,19 @@
 									<value>true</value>
 								</systemProperty>
 								<systemProperty>
-									<name>log4j.configuration</name>
-									<value>file:${basedir}/src/test/resources/log4j.properties</value>
+									<name>log4j2.configurationFile</name>
+									<value>file:${basedir}/src/test/resources/log4j2-test.properties</value>
 								</systemProperty>
 							</systemProperties>
 							<webApp>
+								<contextPath>/</contextPath>
+								<jettyEnvXml>
+									${basedir}/src/test/resources/jetty-env.xml
+								</jettyEnvXml>
 								<webInfIncludeJarPattern>^$</webInfIncludeJarPattern>
 								<containerIncludeJarPattern>^$</containerIncludeJarPattern>
 							</webApp>
 						</configuration>
-						<dependencies>
-							<dependency>
-								<groupId>org.slf4j</groupId>
-								<artifactId>slf4j-api</artifactId>
-								<version>1.7.25</version>
-								<scope>compile</scope>
-							</dependency>
-							<dependency>
-								<groupId>org.slf4j</groupId>
-								<artifactId>jcl-over-slf4j</artifactId>
-								<version>1.7.25</version>
-								<scope>compile</scope>
-							</dependency>
-							<dependency>
-								<groupId>org.slf4j</groupId>
-								<artifactId>slf4j-log4j12</artifactId>
-								<version>1.7.25</version>
-								<scope>compile</scope>
-							</dependency>
-						</dependencies>
 					</plugin>
 				</plugins>
 			</build>
@@ -121,6 +101,12 @@
 			<artifactId>httpclient</artifactId>
 			<version>4.5.6</version>
 			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
